Performed intermediate housekeeping on the styling. Addressed spacing issues.

--- a/style.css
+++ b/style.css
@@ -116,17 +116,27 @@ body {
   color: var(--clr-primary-1);
 }
 
+p:not([class]) {
+  opacity: 0.7;
+  max-width: 35ch;
+}
+
+p[data-width="wide"] {
+  max-width: 45ch;
+}
+
 /* Button */
 
 .button {
+  display: inline-flex;
   text-decoration: none;
   cursor: pointer;
   border-radius: 100vmax;
   border: 0;
-  padding: 1em 2.5em;
+  padding: 1.25em 2.5em;
   font-weight: var(--fw-bold);
   font-size: var(--fs-button);
-  line-height: 0;
+  line-height: 1;
   color: var(--clr-neutral-4);
   background-color: var(--clr-primary-2);
   box-shadow: 0 1.125em 1em -1em var(--clr-primary-2_1);
@@ -231,6 +241,32 @@ body {
   .mobile-nav-toggle .icon-close {
     display: none;
   }
+}
+
+/* Cta */
+
+.cta {
+  position: relative;
+  isolation: isolate;
+  text-align: center;
+}
+
+@media (min-width: 50em) {
+  .cta {
+    text-align: left;
+  }
+}
+
+.cta::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+  background-image: url("images/bg-tablet-pattern.svg"),
+    url("images/bg-tablet-pattern.svg");
+  background-position: -15rem -5rem, 80rem -42rem;
+  background-repeat: no-repeat;
+  opacity: 0.1;
 }
 
 /* Utility Classes */
@@ -346,6 +382,24 @@ body {
 
   width: min(var(--max-width), 100% - (var(--padding) * 2));
   margin-inline: auto;
+}
+
+.justify-self-end {
+  justify-self: end;
+}
+
+.vertical-align-center {
+  align-items: center;
+}
+
+@media (min-width: 50em) {
+  .justify-self-end-md {
+    justify-self: end;
+  }
+}
+
+:where(.flow :not(:first-child)) {
+  margin-top: var(--flow-spacer, 1.5em);
 }
 
 .even-columns {
